kubernetes/applications/fasten/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fasten-svc
  namespace: homelab
  labels:
    app: fasten
spec:
  ports:
    - port: 8080
      name: web
  selector:
    app: fasten
